fix(css): show y overflow

--- a/app/frontend/style.css
+++ b/app/frontend/style.css
@@ -17,14 +17,14 @@
 
 html {
   font-size: 16px;
-  overflow: hidden;
+  overflow-x: hidden;
   font-family: "Berkeley Mono";
 }
 
 body {
   background-color: var(--global-background);
   margin: 0px;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .bold {
